scss/partials/_comment_reactions.scss
div.comment-reactions {
  height: 20px;

  button.comment-reaction-btn {
    outline: none;
    position: relative;
    height: 20px;
    cursor: default;
    color: #C3C5C8;
    @include avenir_H();
    font-size: 15px;
    padding: 0px;

    div.reaction {
      display: inline-block;
      -webkit-filter: grayscale(100%);
      filter: grayscale(100%);
    }

    div.count {
      margin-left: 4px;
      display: inline-block;
    }

    &.can-react {
      cursor: pointer;

      &.reacted:hover {
        div.reaction {
          -webkit-filter: grayscale(100%);
          filter: grayscale(100%);
        }
      }

      &:hover {
        div.reaction {
          -webkit-filter: grayscale(0%);
          filter: grayscale(0%);
        }
      }
    }

    &.reacted {
      div.reaction {
        -webkit-filter: grayscale(0%);
        filter: grayscale(0%);
      }

      div.count {
        color: $carrot_yellow;
      }
    }
  }
}

