Try to fix cut off with css size.

--- a/scss/partials/_comment_reactions.scss
+++ b/scss/partials/_comment_reactions.scss
@@ -15,6 +15,8 @@ div.comment-reactions {
       display: inline-block;
       -webkit-filter: grayscale(100%);
       filter: grayscale(100%);
+      width: 20px;
+      padding: 2px;
     }
 
     div.count {
